--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ nav a:hover{
 
 section{
     background: transparent;
-    width: 960px;
+    width: 80%;
     margin: 0 auto;
     text-align: center;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
@@ -165,6 +165,14 @@ form{
     border: 1px solid black;
     height: 50px;
 }
+.contactForm{
+    background: transparent;
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    padding: 20px 0 20px 0;
+}
 
 /***************************** Contact Page *******************************/
  .navTwo{
@@ -192,17 +200,32 @@ form{
         padding: 20px 0 100px 0;
     }
     nav a {
+        display: block;
         font-family: 'Sedgwick Ave', cursive;
         text-decoration: none;
         color: black;
-        margin: 40px 50px 0 50px;
+        margin: 20px 50px 0 50px;
         font-size: 30px;
     }
+    nav a:hover{
+        border: none;
+        font-size: 35px;
+    }
+    
     .postContent{
         display: block;
         width: 70%;
         text-align: left;
         margin: 0 auto;
     }
- }
+
+    .btns{
+        text-align: center;
+        margin: 30px 0 10px 0;
+    }
+    .score {
+        text-align: center;
+        margin: 5px 0 0 0px;
+    }
+}
  
