--- a/styles.css
+++ b/styles.css
@@ -214,9 +214,13 @@ form{
     
     .postContent{
         display: block;
-        width: 70%;
+        width: 90%;
         text-align: left;
         margin: 0 auto;
+    }
+	 }
+    section{
+        width: 95%;
     }
 
     .btns{
